# classroom-video-analyzer

./: .dockerignore  .gitignore  Dockerfile  README.md  generate_report.py  pyproject.toml  render.yaml  run_jj_vision.py  run_ks_vision.py  run_pt.py  sparkclaw.yaml  start.bat  test_hybrid.py  test_qwen_vl.py  test_vision_diag.py
config/: api_keys.json.template  default.yaml
docs/: ARCHITECTURE.md  DECISIONS.md  PRD.md  PROJECT_INITIATION_AND_DELIVERY.md  QUALITY_LOGIC_AUDIT_2026-06-15.md  UAP_DEPLOYMENT.md  WEB_SYSTEM_DESIGN.md  class-diagram.mermaid  comprehensive_scoring_standard_v5.md  keyframe_selection_strategy.md  live_classroom_software_analysis_notes.md  scoring_calibration_framework.md  sequence-diagram.mermaid  system_design.md  web-class-diagram.mermaid  web-sequence-diagram.mermaid
docs/standards_extracted/: LA培训绩效指标沟通.pdf.txt  不同班型教师画像plus评价标准（L1-L3）.pdf.txt  不同班型教师画像plus评分标准（L7-L9）.pdf.txt  学前（L1-L3教师能力培养模型.pdf.txt  小低（L4-L6教师能力培养模型.pdf.txt  小高（L7-L9教师能力培养模型.pdf.txt  课堂评价-评分标准（L4-L6）.pdf.txt  质检表更新3.0.pdf.txt
prompts/: event_detection.md  quality_assessment.md  quality_assessment_licc.md  visual_observation.md
src/classroom_analyzer/: __init__.py  __main__.py  cli.py  config.py  models.py  paths.py  pipeline.py
tests/: __init__.py  conftest.py  test_analysis.py  test_asr.py  test_cli.py  test_config.py  test_extractors.py  test_model_config.py  test_models.py  test_pipeline.py  test_reports.py  test_server_uploads.py
tools/: .gitignore
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  index.css  vite-env.d.ts
(+34 files in other folders)
