[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "classroom-analyzer"
version = "1.0.0"
description = "课堂视频智能分析工具 — 基于语义驱动的教学视频质检、评分与素材提取"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
authors = [
    {name = "Kou Douma", email = "engineer@example.com"},
]

dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
    "openai>=1.0.0",
    "jinja2>=3.1.0",
    "tencentcloud-sdk-python>=3.0.0",
    "cos-python-sdk-v5>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
classroom-analyzer = "classroom_analyzer.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
